fixing layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -33,19 +33,24 @@ html::-webkit-scrollbar-thumb {
 }
 html {
     font-size: 62.5%;
-    overflow: hidden;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
+    display: block;
 }
 body {
     background-color: var(--background-body);
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 #container {
     width: 70%;
     max-width: 780px;
     height: 100vh;
     margin: 0 auto;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
+    padding: 1rem;
+    display: block;
     align-items: center;
 }
 .header {
@@ -55,7 +60,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.5rem 9%;
 }
 .header .logo {
     font-size: 2.5rem;
@@ -78,7 +82,7 @@ body {
 main {
     width: 100%;
     padding-top: 25rem;
-    margin: 6rem auto;
+    margin-top: 15rem;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -105,7 +109,7 @@ main .title:hover {
     margin: 0 auto;
     text-align: center;
     color: white;
-    margin-top: 8vh;
+    margin-block: 3rem;
     position: relative;
 }
 .footer .icons {
@@ -113,7 +117,7 @@ main .title:hover {
 }
 .footer a {
     color: var(--blue);
-    font-size: 16px;
+    font-size: 1.5rem;
     margin-bottom: 20px;
     margin-left: 2rem;
 }
@@ -124,7 +128,7 @@ main .title:hover {
 }
 footer .credit {
     text-align: center;
-    font-size: 16px;
+    font-size: 1.5rem;
 }
 footer.credit a {
     color: var(--blue);
@@ -165,22 +169,39 @@ footer.credit a {
         text-align: center;
     }
     .title h1 {
+        font-size: 3rem;
+    }
+    .title .subtitle {
+        text-align: center;
+        margin: 3rem auto;
+        font-size: 2rem;
+        color: var(--blue);
+    }
+}
+/*  👇👇👇👇👇 media queries 👇👇👇👇👇 */
+@media (max-width: 480px) {
+    html {
+        font-size: 50%;
+    }
+    main {
+        padding-top: 20rem;
+        margin-top: 15rem;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    .title h1 {
         align-items: center;
         justify-content: center;
         font-size: 3rem;
         margin: 6rem auto;
         text-align: center;
     }
-    .home .content h3 {
-        font-size: 4rem;
-    }
-}
-/*  👇👇👇👇👇 media queries 👇👇👇👇👇 */
-@media (max-width: 450px) {
-    html {
-        font-size: 50%;
-    }
-    .home .home-slider .swiper-slide {
-        width: 27rem;
+    .title .subtitle {
+        text-align: center;
+        margin: 1.5rem auto;
+        font-size: 16px;
+        color: var(--blue);
     }
 }
